.kubernetes/media/overlays/perf/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: media-app
spec:
  hostnames:
    - perf-navy-media.axtest.net
  parentRefs:
    - name: mosaic
      namespace: gateway
  rules:
    - backendRefs:
        - name: media
          port: 10200
      matches:
        - path:
            type: PathPrefix
            value: /
